fix(): Fixed horizontal scrolling on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -50,9 +50,9 @@ html {
     flex-direction: column;
     align-items: center;
     justify-content: start;
-    height: 2.5rem;
+    height: 3rem;
     overflow: hidden;
-    line-height: 0.85;
+    line-height: 1;
 }
 
 .text-hover{
