--- a/src/components/TacticPreviewList.css
+++ b/src/components/TacticPreviewList.css
@@ -42,7 +42,7 @@
   background: rgb(82, 79, 85);
   border-radius: 40px;
   margin: 0.3vw 0.3vw;
-  padding: 3.3vh 5vw 2.5vh 3.7vw;
+  padding: 4vh 1.2vw 2.5vh 0.5vw;
   box-shadow:
     inset 0 3px 15px rgba(0,0,0,0.7),
     inset 0 1px 2px rgba(0,0,0,0.2),
@@ -248,6 +248,10 @@
 
 /* Mobile */
 @media (max-width: 580px) {
+  .folder-layer{
+    margin: 0.3vw 0.3vw;
+    padding: 3.3vh 5vw 2.5vh 3.7vw;
+  }
 
   .folder-layer .folder-layer--version {
     width: 265px;
